# dioxus_page_test

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
src/: main.css  main.rs
src/components/: footer.css  footer.rs  intro.css  intro.rs  mod.rs  nav.css  nav.rs
src/routes/: home.css  home.rs  mod.rs  router.rs
